fixed spelling, spacing and removed arrow icon

--- a/src/app.scss
+++ b/src/app.scss
@@ -58,6 +58,7 @@ a {
   .app-main {
     height: calc(100vh - #{$header-height-sm});
     margin-top: $header-height-sm;
+    margin-left: 175px;
   }
 }
 @media (min-width: $break-md) {
